#Проектная работа 2-й спринт

--- a/src/pages/chats-list/chats-list.html
+++ b/src/pages/chats-list/chats-list.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <div id="app"></div>
-<script type="module" src="./profile.ts"></script>
+<script type="module" src="chats-list.ts"></script>
 </body>
 </html>
-
