--- a/src/pages/page404/page404.html
+++ b/src/pages/page404/page404.html
@@ -5,15 +5,7 @@
     <title>{{title}}</title>
 </head>
 <body>
-    {{#> block class='block'}}
-        <div class="b-flex m-b-10">
-            {{> logo class='col-40'}}
-            <h1 class="col-60">
-                <div class="x36-size m-b-10">404</div>
-                <div>Страницы не существует</div>
-            </h1>
-        </div>
-        <div> <a class="custom-st-href x12-size" href="/">Назад</a></div>
-    {{/block}}
+    <div id="app"></div>
+    <script type="module" src="page404.ts"></script>
 </body>
 </html>
