--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <title>{{title}}</title>
   </head>
   <body>
-  <div id="app"></div>
+  <ul id="app">
+    <li><a href="/pages/registration/registration.html">Регистрация</a></li>
+    <li><a href="/pages/profile/profile.html">Профиль</a></li>
+    <li><a href="/pages/login/login.html">Вход в систему</a></li>
+    <li><a href="/pages/chats-list/chats-list.html">Чат</a></li>
+    <li><a href="/pages/page404/page404.html">Страница 404</a></li>
+    <li><a href="/pages/page500/page500.html">Страница 500</a></li>
+  </ul>
   </body>
 </html>
