--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <title>{{title}}</title>
   </head>
   <body>
-  <div id="app"></div>
-  <script type="module" src="login.ts"></script>
+    <div id="app"></div>
+    <script type="module" src="login.ts"></script>
   </body>
 </html>
