--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,7 @@
     <title>{{title}}</title>
   </head>
   <body>
-  <nav>
-    <ul id="app">
-      <li><a href="/pages/registration/registration.html">Регистрация</a></li>
-      <li><a href="/pages/profile/profile.html">Профиль</a></li>
-      <li><a href="/pages/login/login.html">Вход в систему</a></li>
-      <li><a href="/pages/chats-list/chats-list.html">Чат</a></li>
-      <li><a href="/pages/page404/page404.html">Страница 404</a></li>
-      <li><a href="/pages/page500/page500.html">Страница 500</a></li>
-    </ul>
-  </nav>
+    <main class="app"> </main>
+    <script type="module" src="./index.ts"></script>
   </body>
 </html>
