--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>{{title}}</title>
   </head>
   <body>
-    <main class="app"> </main>
-    <script type="module" src="./index.ts"></script>
+    <main class="app"></main>
+    <script type="module" src="./main.ts"></script>
   </body>
 </html>
